--- a/.github/workflows/nix-build-job.yaml
+++ b/.github/workflows/nix-build-job.yaml
@@ -184,7 +184,7 @@ jobs:
           docker exec installer-test-ubuntu bash -c \
                  "curl -LsSf https://astral.sh/uv/install.sh | sh"
           docker exec -e TENZIR_ALLOC_STATS=1 ${{ inputs.arch == 'x86_64' && '-e TENZIR_ALLOC_ACTOR_STATS=1' || '' }} installer-test-ubuntu bash -c \
-                 'export PATH="/opt/tenzir/bin:/root/.local/bin:/usr/bin:/bin:$PATH" && uvx tenzir-test --root /src/tenzir/test tests/functions/time'
+                 'export PATH="/opt/tenzir/bin:/root/.local/bin:/usr/bin:/bin:$PATH" && uvx tenzir-test --root /src/tenzir/test-legacy tests/functions/time'
           docker exec installer-test-ubuntu halt
       - name: Test Installation (Rocky Linux)
         if: runner.os == 'Linux'
@@ -208,5 +208,5 @@ jobs:
           docker exec installer-test-rocky bash -c \
                  "curl -LsSf https://astral.sh/uv/install.sh | sh"
           docker exec -e TENZIR_ALLOC_STATS=1 ${{ inputs.arch == 'x86_64' && '-e TENZIR_ALLOC_ACTOR_STATS=1' || '' }} installer-test-rocky bash -c \
-                 'export PATH="/opt/tenzir/bin:/root/.local/bin:/usr/bin:/bin:$PATH" && uvx tenzir-test --root /src/tenzir/test tests/functions/time'
+                 'export PATH="/opt/tenzir/bin:/root/.local/bin:/usr/bin:/bin:$PATH" && uvx tenzir-test --root /src/tenzir/test-legacy tests/functions/time'
           docker exec installer-test-rocky halt
